Fix vertical alignment of template choice grid

--- a/symfony/src/AppBundle/Resources/public/css/main.scss
+++ b/symfony/src/AppBundle/Resources/public/css/main.scss
@@ -181,6 +181,7 @@ form:after {
     }
     
     img {
+        vertical-align: top;
         position: relative;
         @include shadow();
     }
